--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
         </div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Produk</a></li>
+            <li><a href="produk.html" target="_blank">Produk</a></li>
             <li><a href="#">Pembelian</a></li>
             <li><a href="#">Pelanggan</a></li>
             <li><a href="#">Logout</a></li>
