membuat halaman data

--- a/app/Codingan resource/Halaman Data User fix.html
+++ b/app/Codingan resource/Halaman Data User fix.html
@@ -96,7 +96,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2023 My Simple Web Page</p>
+    <pgi>&copy; 2023 My Simple Web Page</pgi>
 </footer>
 
 </body>
